Point generation and surface normals calculated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ASCIIShapes)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ASCIIShapes main.cpp DonutPointGeneration.h Point.h Rotate.h RotationMatrix.h Utils.h)
+add_executable(ASCIIShapes main.cpp DonutPointGeneration.h Point.h Rotate.h RotationMatrix.h Utils.h Vector.h)
