Rotating cube using orthogonal projection for less deformation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ASCIIShapes)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ASCIIShapes main.cpp Point.h Rotate.h Utils.h Vector.h)
+add_executable(ASCIIShapes main.cpp Point.h Rotate.h Utils.h Vector.h Donut.h Cube.h)
